Fix table of contents alignment when used as a sidebar

--- a/_assets/stylesheets/_layout.scss
+++ b/_assets/stylesheets/_layout.scss
@@ -536,6 +536,7 @@
   @include media($large) {
     @include span-columns(4);
   }
+  margin-left: 0;
   ul {
     margin-top: 0;
   }
